[package]
name = "buds-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.18.0", features = ["full"] }
uuid = "0.8.1"
futures = "0.3.8"
bluer = { version = "0.15.0", features = ["full"] }